syntax = "proto2";

package Proto.base_pb;

//option optimize_for = LITE_RUNTIME;

// 所有服务器->客户端的消息类型	LUA端为20000以上 C#端为20000以下
enum SCMessageEnum {
  LoginResponse = 100004;
  PingResponse = 10002;
  ReconnectResponse = 10003; //断线重连
  SCChannelExpired = 10004;
  SCServerClosed = 10005;
  SCServerVersion = 10006;
  SCPrompt = 10007;
  SCNotify = 10008;
  GmOrderResponse = 10009;
  LoginSuccResp = 10010;
  CreateRoleResponse = 10011; //创建角色
  RoleListResponse = 10012; //角色列表
  RoleLoginResponse = 10013; //角色登陆游戏
  RoleLogoutResponse = 10014; //角色登出游戏
  
  
  ChatResponse = 10101;//聊天
  FaceResponse = 10102;//表情
  DanceResponse = 10103;//跳舞
  SeatResponse = 10104;//坐
  Response_PhoneCode = 100044;
}
